# SoftwareIntegration

./: .gitignore  package-lock.json  package.json
00._Assignments/00._Mandatories/: 01._Mandatory_1.md  02._Mandatory_2.md
00._Assignments/01a [Individual] Data parsing servers - Part I/scripts/: package-lock.json  package.json  parse.py  pyproject.toml
00._Assignments/04b [Pair] Database granular access/: DatabaseAndDeployment.md  Integrate.md  init.sql
00._Assignments/08b [DLS Group] Generate code documentation for your DLS project/: openapi_doc.md  pdoc_doc.md
00._Assignments/10a [Individual] Document A Database/: guide.md
00._Assignments/10b [Individual, Pairs, Group] Migrate from One Database to Another/: docker-compose.yml  guide.md  package-lock.json
02._Text-based_Data_Formats/: me.csv  me.json  me.txt  me.xml  me.yaml  paymentiframe.html
03._Modules/htmlclassic/: index.html  index.js  myModules.js
03._Modules/nodesmodules/: index.js
03._Modules/python_main/: library_importer.py  potential_library.py
04._Encode_Decode/01._node/: decoder.js
04._Encode_Decode/02._python/: decoder.py
05._Python_Virtual_Environment/01._venv/: main.py
05._Python_Virtual_Environment/03._poetry/: pyproject.toml
06._Simple_Servers/01._node/: app.js
08._Server_Server/: guide.txt
10._Date/01._node/: index.js
17._Database_Migration/: pgdump.sql
18._CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: .direnv  package-lock.json  package.json
23._EmbeddedYoutube/: embeddedYoutube.html
(+110 files in other folders)
